--- a/grupo3.html
+++ b/grupo3.html
@@ -5,10 +5,13 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Panel de profesores | Briko</title>
+
+        <!-- stylesheets -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.css" />
         <link rel="stylesheet" href="vendor/foundation-icons.css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
         <link rel="stylesheet" href="stylesheets/style.css" />
+
     </head>
     <body>
 
@@ -50,16 +53,19 @@
             <!-- END Side menu -->
 
             <div class="medium-9 columns">
-                <h1 class="cad-title">Grupo 3</h1>
-                <a data-toggle="edit-group"><i class="fi-pencil cad-icon edit"></i></a>
-                <a data-toggle="delete-group"><i class="fi-trash cad-icon delete"></i></a>
-                <a class="button" href="temas.html" style="float:right; margin-top:10px">Ir a temas</a>
-                <div class="warning progress" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="25 percent" aria-valuemax="100">
-                    <span class="progress-meter" style="width: 74%">
-                        <p class="progress-meter-text">74%</p>
-                    </span>
-                </div>
+              <!-- title and status bar -->
+              <h1 class="cad-title">Grupo 3</h1>
+              <a data-toggle="edit-group"><i class="fi-pencil cad-icon edit"></i></a>
+              <a data-toggle="delete-group"><i class="fi-trash cad-icon delete"></i></a>
+              <a class="button" href="temas.html" style="float:right; margin-top:10px">Ir a temas</a>
+              <div class="warning progress" role="progressbar" tabindex="0" aria-valuenow="20" aria-valuemin="0" aria-valuetext="25 percent" aria-valuemax="100">
+                  <span class="progress-meter" style="width: 74%">
+                      <p class="progress-meter-text">74%</p>
+                  </span>
+              </div>
+              <!-- END title and status bar -->
 
+            <!-- student's table -->
                 <table>
                     <thead>
                         <tr>
@@ -144,15 +150,21 @@
 
                     </tbody>
                 </table>
+                <!-- END student's table -->
+
+                <!-- add student button -->
                 <div class="row">
                   <a data-toggle="add-student"><i class="fi-plus cad-add-student"></i></a>
                 </div>
+                <!-- END add student button -->
             </div>
             
+            <!-- graph -->
             <div class="medium-9 columns">
                 <h2 class="cad-title">Comprension de Temas</h2>
                 <div class="ct-chart"></div>
             </div>
+            <!-- END graph -->
 
         </div>
 
@@ -267,6 +279,9 @@
   </button>
 </div>
 
+<!-- END Modals -->
+
+<!-- scripts -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/what-input/2.1.1/what-input.js"></script>
         <script src="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.js"></script>
