Finished adding comments

--- a/alumno.html
+++ b/alumno.html
@@ -48,13 +48,18 @@
 
         <!-- END Side menu -->
 
+        <!-- title -->
         <div class="medium-9 columns">
           <h1 class="cad-title">Detalle del Alumno</h1>
           <a data-toggle="edit-student"><i class="fi-pencil cad-icon edit"></i></a>
           <a data-toggle="delete-student"><i class="fi-trash cad-icon delete"></i></a>
+        <!-- END title -->
 
         </div>
+
           <div class="medium-9 columns">
+
+             <!-- student's information -->
             <div class="medium-12 columns">
               <div class="row" style="background: #356799; border: 3px solid white;border-radius:15px; padding-bottom: 20px; padding-top: 15px;">
                 <div class="cad-user-image columns">
@@ -69,6 +74,9 @@
                 </div>
               </div>
             </div>
+             <!-- END student's information -->
+
+            <!-- student's progress -->
             <div class="medium-12 columns">
               <div class="row" style="background: #356799; border: 3px solid white;border-radius:15px;margin-top:30px;" data-equalizer="" data-equalizer-mq="small-down large-up">
                 <div class="columns small-2" style="margin-top: 0px; padding: 0px; z-index: 10; height: 179px;" data-equalizer-watch="">
@@ -102,70 +110,117 @@
                 </div>
               </div>
             </div>
+            <!-- END student's progress -->
 
             <div class="medium-12 columns">
               <div class="row" style="margin-top:30px; background: #DFE7EF; border: 3px solid white;border-radius:15px; padding-bottom: 20px; padding-top: 15px;">
                 <div class="medium-6 small-6 columns" align="center">
+
+                  <!-- completed activities summary -->
                   <div class="cad-card">
                     <p class="ptextbk3 cad-number">7</p>
                     <img src="https://brikorobotics.com/images/iconosheader/temas.png" class="cad-image" alt="imgproy">
                   </div>
+                  <!-- END completed activities summary -->
+
+                  <!-- activities' completion details -->
                   <ul class="accordion" data-accordion style="text-align:left; margin-top:40px">
+
+                    <!-- first theme -->
                     <li class="accordion-item is-active" data-accordion-item>
                       <a href="#" class="accordion-title cad-accordion-title">Brikos <span class="cad-info">(5/5)</span></a>
                       <div class="accordion-content" data-tab-content>
+                        <!-- first theme's activities -->
                         <h5><i class="fi-check cad-done"></i> <span>Leds</span></h5>
                         <h5><i class="fi-check cad-done"></i> <span>Sensor de distancia</span></h5>
                         <h5><i class="fi-check cad-done"></i> <span>Botones</span></h5>
                         <h5><i class="fi-check cad-done"></i> <span>Motores</span></h5>
                         <h5><i class="fi-check cad-done"></i> <span>Bocina</span></h5>
+                        <!-- END first theme's activities -->
                       </div>
                     </li>
+                    <!-- END first theme -->
+
+                    <!-- second theme -->
                     <li class="accordion-item" data-accordion-item>
                       <a href="#" class="accordion-title cad-accordion-title">Nivel 1 <span class="cad-info">(2/3)</span></a>
                       <div class="accordion-content" data-tab-content>
+                        <!-- second theme's activities -->
                         <h5><i class="fi-check cad-done"></i> <span>Introducción a programación</span></h5>
                         <h5><i class="fi-check cad-done"></i> <span>Pausas y comentarios</span></h5>
                         <h5><i class="fi-x cad-not-done"></i> <span>Variables</span></h5>
+                        <!-- END second theme's activities -->
                       </div>
                     </li>
+                    <!-- END second theme -->
+
+                    <!-- third theme -->
                     <li class="accordion-item" data-accordion-item>
                       <a href="#" class="accordion-title cad-accordion-title">Nivel 2 <span class="cad-info">(0/3)</span></a>
                       <div class="accordion-content" data-tab-content>
+                        <!-- third theme's activities -->
                         <h5><i class="fi-x cad-not-done"></i> <span>Movimiento</span></h5>
                         <h5><i class="fi-x cad-not-done"></i> <span>Operaciones aritméticas</span></h5>
                         <h5><i class="fi-x cad-not-done"></i> <span>IF</span></h5>
+                        <!-- END third theme's activities -->
                       </div>
                     </li>
+                    <!-- END third theme -->
+
                   </ul>
+                  <!-- END activities' completion details -->
+
                 </div>
                 <div class="medium-6 small-6 columns" align="center">
+
+                  <!-- completed projects summary -->
                   <div class="cad-card">
                     <p class="ptextbk3 cad-number">2</p>
                     <img src="https://brikorobotics.com/images/iconosheader/proyectos.png" class="cad-image" alt="imgproy">
                   </div>
+                  <!-- END completed projects summary -->
+
+                  <!-- projects' completion details -->
                   <ul class="accordion" data-accordion style="text-align:left; margin-top:40px">
+
+                    <!-- first theme -->
                     <li class="accordion-item is-active" data-accordion-item>
                       <a href="#" class="accordion-title cad-accordion-title">Nivel 1 <span class="cad-info">(2/2)</span></a>
                       <div class="accordion-content" data-tab-content>
+                        <!-- first theme's projects -->
                         <h5><i class="fi-check cad-done"></i> <span>Artbot</span></h5>
                         <h5><i class="fi-check cad-done"></i> <span>Rockola</span></h5>
+                        <!-- END first theme's projects -->
                       </div>
                     </li>
+                    <!-- END first theme -->
+
+                    <!-- second theme -->
                     <li class="accordion-item" data-accordion-item>
                       <a href="#" class="accordion-title cad-accordion-title">Nivel 2 <span class="cad-info">(0/2)</span></a>
                       <div class="accordion-content" data-tab-content>
+                        <!-- second theme's projects -->
                         <h5><i class="fi-x cad-not-done"></i> <span>Casa</span></h5>
                         <h5><i class="fi-x cad-not-done"></i> <span>Sumo</span></h5>
+                        <!-- END second theme's projects -->
                       </div>
                     </li>
+                    <!-- END second theme -->
+
+                    <!-- third theme -->
                     <li class="accordion-item" data-accordion-item>
                       <a href="#" class="accordion-title cad-accordion-title">Nivel 3 <span class="cad-info">(0/1)</span></a>
                       <div class="accordion-content" data-tab-content>
+                        <!-- third theme's projects -->
                         <h5><i class="fi-x cad-not-done"></i> <span>Sumo</span></h5>
+                        <!-- END third theme's projects -->
                       </div>
                     </li>
+                    <!-- END third theme -->
+
                   </ul>
+                  <!-- END projects' completion details -->
+
                 </div>
               </div>
             </div>
@@ -227,7 +282,9 @@
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
+<!-- END Modals -->
 
+<!-- javascripts -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/what-input/2.1.1/what-input.js"></script>
         <script src="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.js"></script>
