--- a/grupo3.html
+++ b/grupo3.html
@@ -281,7 +281,7 @@
 
 <!-- END Modals -->
 
-<!-- scripts -->
+<!-- javascripts -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/what-input/2.1.1/what-input.js"></script>
         <script src="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.js"></script>
